Updating to java21 - fixing ptchng.sh